[project]
name = 'baselayer'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
    "arrow>=0.15.4",
    "distributed>=2023.1.1",
    "jinja2>=2.11.2",
    "numpy>=1.21.4",
    "packaging>=23.0",
    "phonenumbers>=8.12.15",
    "psycopg2-binary>=2.8.6",
    "pyjwt>=2.0.1",
    "python-dateutil>=2.8.1",
    "python-slugify>=4.0.1",
    "pyyaml>=6.0.1",
    "pyzmq>=20.0.0",
    "requests>=2.25.1",
    "simplejson>=3.17.2",
    "social-auth-core==4.2.0",
    "sqlalchemy>=2.0.38,<3",
    "sqlalchemy-utils>=0.36.8",
    "supervisor>=4.3",
    "tomli >= 2.1.0; python_full_version < '3.11'",
    "tornado>=6.0.3",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"

[dependency-groups]
test = [
    "playwright>=1.55",
    "pytest>=8.0.0",
    "pytest-playwright>=0.7.1",
]
